--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,10 @@ services:
      - 8000:8000
     depends_on:
      - redis
+     - db
+    environment:
+      DATABASE_URL: postgresql://user:password@db:5432/mydatabase
+
   frontend:
     build:
       dockerfile: web.Dockerfile
@@ -13,5 +17,19 @@ services:
       - 3000:80
     depends_on:
       - backend
+
   redis:
     image: redis
+
+  db:
+    image: postgres:16
+    restart: always
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: mydatabase
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
