--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ nh3==0.2.20
 packaging==24.2
 platformdirs==4.3.6
 psutil==6.1.1
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
