fix: container building

--- a/compose.yml
+++ b/compose.yml
@@ -29,7 +29,12 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: mydatabase
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d mydatabase"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   pgadmin:
     image: dpage/pgadmin4
@@ -42,6 +47,3 @@ services:
     depends_on:
       - db
     restart: unless-stopped
-
-volumes:
-  postgres_data:
